--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ main {
 
 footer {
 	width: 100%;
-	padding: 30px 0;
+	padding: 30px 10px;
 	text-align: center;
 	color: white;
 	font-size: 24px;
@@ -113,6 +113,20 @@ footer {
 	.list__item {
 		width: 41%;
 	}
+}
+
+@media (max-width: 500px) {
+  .header-inner {
+    flex-direction: column;
+  }
+
+  .logo {
+    margin-bottom: 20px;
+  }
+
+  footer {
+    font-size: 18px;
+  }
 }
 
 @media (max-width: 400px) {
